:tada: 使用jdk14-preview的records特性